[package]
name = "too-many-enemies"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0 OR CC0-1.0"

# Compile with Performance Optimizations:
# https://bevyengine.org/learn/book/getting-started/setup/#compile-with-performance-optimizations

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.release.package."bevy-inspector-egui"]
opt-level = 1

[profile.dev.package."bevy-inspector-egui"]
opt-level = 1


[dependencies]
bevy = "0.12.1"
bevy-inspector-egui = "0.21"
anyhow = "1.0"
bevy_rapier3d = {version="0.23.0", features = ["debug-render-3d"]}
rand = "0.8.5"
